crates/science-parser/tests/snapshots/migration__a_comparison_phrase_does_not_derail_the_rest_of_the_file.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..75
  Fn `f` @0..74
    params
      Param `a` @6..12
        type: Path `Int` @9..12
      Param `b` @14..20
        type: Path `Int` @17..20
    ret: Path `Bool` @25..29
    body: Block @35..74
      Let `first` @35..63
        value: Binary `>=` @48..63
          lhs: Path `a` @48..49
          rhs: Path `b` @62..63
      tail: Binary `>=` @68..74
        lhs: Path `a` @68..69
        rhs: Path `b` @73..74
--- diagnostics ---
SC0143 @50..61 the comparison is written `>=`
  note `is` and `is not` are the only comparisons written as words
