crates/science-parser/tests/snapshots/migration__a_pre_revision_file_reports_every_word_once.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..235
  Interface `Summarize` @0..50
    methods
      Fn `summarize` @21..50
        receiver: self @35..39
        ret: Path `String` @44..50
  Has @52..234
    type: Path `Doc` @52..55
    methods
      Fn `show` @73..234
        receiver: self @82..86
        params
          Param `rows` @88..115
            type: Borrowed @94..115
              Path `Array` @103..115
                generics of `Array`
                  Path `Int` @112..115
          Param `n` @117..123
            type: Path `Int` @120..123
        body: Block @134..234
          For @134..180
            pattern: Binding `row` @143..146
            iter: Path `rows` @150..154
            body: Block @168..180
              tail: Call @168..180
                callee: Path `print` @168..175
                args
                  Path `row` @176..179
          tail: Loop @189..234
            body: Block @224..234
              Assign @224..234
                target: Path `n` @224..225
                value: Binary `-` @229..234
                  lhs: Path `n` @229..230
                  rhs: Int 1 @233..234
--- diagnostics ---
SC0139 @0..5 the declaration is written `interface`
SC0141 @60..67 the inherent block is written `Type has:`
SC0138 @138..142 the loop is written `for x in xs`
  note `each` names the subject of a call, as in `docs.map(each.title)`, and nothing else
SC0144 @168..175 the free function is `print`
  note `print` writes a newline; `write` is the form that does not
SC0143 @197..208 the comparison is written `>=`
  note `is` and `is not` are the only comparisons written as words
SC0142 @189..194 the unbounded loop is written `loop`
  note end it with the condition negated: make `if not …: break` the first statement of the body, or write a count as a range, `for i in 0..n:`
