crates/science-parser/tests/snapshots/migration__methods_after_has_does_not_derail_the_rest_of_the_file.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..102
  Has @0..52
    type: Path `Doc` @0..3
    methods
      Fn `new` @21..52
        ret: Path `Doc` @34..37
        body: Block @47..52
          tail: Call @47..52
            callee: Path `Doc` @47..50
  Has @54..101
    type: Path `Note` @54..58
    methods
      Fn `new` @68..101
        ret: Path `Note` @81..85
        body: Block @95..101
          tail: Call @95..101
            callee: Path `Note` @95..99
--- diagnostics ---
SC0141 @4..15 the inherent block is written `Type has:`
