crates/science-parser/tests/snapshots/migration__methods_after_has_is_reported.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..58
  Has @0..57
    type: Path `Doc` @0..3
    methods
      Fn `new` @21..57
        ret: Path `Doc` @39..42
        body: Block @52..57
          tail: Call @52..57
            callee: Path `Doc` @52..55
--- diagnostics ---
SC0141 @8..15 the inherent block is written `Type has:`
