crates/science-parser/tests/snapshots/migration__the_comparison_diagnostic_quotes_the_whole_phrase.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..51
  Fn `f` @0..50
    params
      Param `a` @6..12
        type: Path `Int` @9..12
      Param `b` @14..20
        type: Path `Int` @17..20
    ret: Path `Bool` @25..29
    body: Block @35..50
      tail: Binary `>=` @35..50
        lhs: Path `a` @35..36
        rhs: Path `b` @49..50
--- diagnostics ---
SC0143 @37..48 the comparison is written `>=`
  note `is` and `is not` are the only comparisons written as words
