crates/science-parser/tests/snapshots/migration__the_word_println_is_reported_where_print_belongs.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..38
  Fn `main` @0..37
    body: Block @21..37
      tail: Call @21..37
        callee: Path `print` @21..28
        args
          Str "hello" @29..36
--- diagnostics ---
SC0144 @21..28 the free function is `print`
  note `print` writes a newline; `write` is the form that does not
