crates/science-parser/tests/snapshots/migration__the_word_trait_does_not_derail_the_rest_of_the_file.snap
---
source: crates/science-parser/tests/migration.rs
expression: parse_source_allowing_errors(source)
---
Module @0..101
  Interface `Summarize` @0..50
    methods
      Fn `summarize` @21..50
        receiver: self @35..39
        ret: Path `String` @44..50
  Interface `Pretty` @52..100
    methods
      Fn `pretty` @74..100
        receiver: self @85..89
        ret: Path `String` @94..100
--- diagnostics ---
SC0139 @0..5 the declaration is written `interface`
